@@ -5,6 +5,8 @@ import jakarta.interceptor.AroundInvoke;
 import jakarta.interceptor.Interceptor;
 import jakarta.interceptor.InvocationContext;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Interceptor capable of incrementing a counter metric each time a business
  * method results in an exception being thrown.
@@ -45,13 +47,14 @@ public class UnhandledExceptionInterceptor {
     }
 
     private void incrementMetric(InvocationContext invocationContext)
-            throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+            throws ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException,
+            InvocationTargetException {
         final String value = getValue(invocationContext);
 
         // First assume value represents a class name
         try {
             final Class<?> aClass = Class.forName(value);
-            metricsHandler.increment((CounterMetric)aClass.newInstance());
+            metricsHandler.increment((CounterMetric) aClass.getDeclaredConstructor().newInstance());
             return;
         } catch (ClassNotFoundException ignored) {}
 
